--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <script src="./lib/phaser.js"></script>
-    <script src="./src/prefabs/Rocket.js"></script>
-    <script src="./src/prefabs/Spaceship.js"></script>
+    <script src="./src/prefabs/Arrow.js"></script>
+    <script src="./src/prefabs/Spirit.js"></script>
     <script src="./src/scenes/Menu.js"></script>
     <script src="./src/scenes/Play.js"></script>
     <script src="./src/main.js"></script>
